# ito-game

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: main_ito-game.yml
src/: app.py
